syntax = "proto3";

package pizzarpc;

import "pizza.proto";


message OrderRequest {
    string pizza_name = 1;
    string customer_name = 2;
    int32 quantity = 3;
    repeated Topping toppings = 4;
}

message OrderResponse {
    string message = 1;
    string order_id = 2;
    Pizza pizza = 3;
    int32 quantity = 4;
    float total_price = 5;
    bool success = 6;
    string error = 7;
}

message MenuRequest {}

message MenuResponse {
    repeated Pizza pizzas = 1;
}

service PizzaService {
    rpc OrderPizza(OrderRequest) returns (OrderResponse);
    rpc GetMenu(MenuRequest) returns (MenuResponse);
}